# AppleADay

./: .gitattributes  .gitignore  README.md  package-lock.json  package.json
apple_client/: CONTRIBUTING.md  README.md  package-lock.json  package.json  vite.config.ts
apple_client/src/: App.css  App.jsx  index.css  main.jsx
apple_client/src/components/: DataCard.jsx  Footer.jsx  (+6 more)
apple_server/: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
apple_server/src/: db.rs  main.rs  routes.rs  types.rs
data_preprocessing/: .gitignore  CONTRIBUTING.md  combined_datasets.ipynb  disease_data_preprocess.ipynb  health_data_preprocess.ipynb  preprocess.ipynb
data_preprocessing/api_planning/: api_page1.md  api_page2.md  api_page3.md  pages.md  postgres_ddl.sql
data_preprocessing/original_datasets/: physical_activity_and_obesity_original.csv  us_chronic_disease_indicators_original.csv
data_preprocessing/preprocessed_data/: AgeAdjustedDiseasePopulation.csv  AgeAdjustedHealthPopulation.csv  ChronicDisease.csv  EthnicityAdjustedDiseasePopulation.csv  EthnicityAdjustedHealthPopulation.csv  GenderAdjustedDiseasePopulation.csv  GenderAdjustedHealthPopulation.csv  Habit.csv  Population.csv  activity_by_age.csv  activity_by_education.csv  activity_by_inc.csv  activity_by_race.csv  activity_by_sex.csv  activity_overall.csv  nutrition_by_age.csv  nutrition_by_education.csv  nutrition_by_inc.csv  nutrition_by_race.csv  nutrition_by_sex.csv  nutrition_overall.csv  weight_by_age.csv  weight_by_education.csv  weight_by_inc.csv  weight_by_race.csv  weight_by_sex.csv  weight_overall.csv
(+11 files in other folders)
